--- a/index.html
+++ b/index.html
@@ -9,16 +9,61 @@
 </head>
     <body>
         <h1 class="title">What is the capital of...</h1>
-        <div class="flex-container">
-            <div class="flex-item item1"><p>Mexico</p></div>
-            <div class="flex-item item2"><p>Papua New Guinea</p></div>
-            <div class="flex-item item3"><p>Iceland</p></div>
-            <div class="flex-item item4"><p>South Korea</p></div>
-            <div class="flex-item item5"><p>Sweden</p></div>
-            <div class="flex-item item6"><p>Georgia</p></div>
-            <div class="flex-item item7"><p>Honduras</p></div>
-            <div class="flex-item item8"><p>Tunis</p></div>
-            <div class="flex-item item9"><p>Austria</p></div>
+        <div class="container">
+            <div>
+                <div class="card">
+                    <div class="front"><p>Mexico</p></div>
+                    <div class="back"><p>Mexico City</p></div>
+                </div>
+            </div>
+            <div>
+                <div class="card">
+                    <div class="front"><p>Papua New Guinea</p></div>
+                    <div class="back"><p>Port Moresby</p></div>
+                </div>
+            </div>
+            <div>
+                <div class="card">
+                    <div class="front"><p>Iceland</p></div>
+                    <div class="back"><p>Reykjavík</p></div>
+                </div>
+            </div>
+            <div>
+                <div class="card">
+                    <div class="front"><p>South Korea</p></div>
+                    <div class="back"><p>Seoul</p></div>
+                </div>
+            </div>
+            <div>
+                <div class="card">
+                    <div class="front"><p>Sweden</p></div>
+                    <div class="back"><p>Stockholm</p></div>
+                </div>
+            </div>
+            <div>
+                <div class="card">
+                    <div class="front"><p>Georgia</p></div>
+                    <div class="back"><p>Tbilisi</p></div>
+                </div>
+            </div>
+            <div>
+                <div class="card">
+                    <div class="front"><p>Honduras</p></div>
+                    <div class="back"><p>Tegucigalpa</p></div>
+                </div>
+            </div>
+            <div>
+                <div class="card">
+                    <div class="front"><p>Tunis</p></div>
+                    <div class="back"><p>Tunis</p></div>
+                </div>
+            </div>
+            <div>
+                <div class="card">
+                    <div class="front"><p>Austria</p></div>
+                    <div class="back"><p>Vienna</p></div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
